oxiplate-derive/tests/broken/writ/closed-like-comment.stderr
error: Expected the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ/closed-like-comment.rs:4:27
  |
4 | #[oxiplate_inline("{{ foo #}")]
  |                           ^^
